[package]
name = "chat_importer"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.32"
chrono = "0.4.15"
fern = "0.6.0"
gchdb = "0.1.1"
htmlescape = "0.3.1"
lazy_static = "1.4.0"
mailparse = "0.13.0"
path-absolutize = "3.0.6"
path-ext = "0.1.0"
plist = "1.0.0"
regex = "1.3.9"
rusqlite = "0.23.1"
scraper = "0.12.0"
serde = "1.0.115"
serde_json = "1.0.57"
walkdir = "2.3.1"

[dependencies.ibackuptool2]
path = "lib/ibackuptool2"

[dependencies.log]
version = "0.4.11"
features = ["max_level_trace", "release_max_level_info"]

[dependencies.structopt]
version = "0.3.17"
default-features = false
