[package]
name = "chat_importer"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.32"
base64 = "0.13.0"
binread = "1.1.1"
chrono = "0.4.15"
fern = "0.6.0"
gchdb = "0.2.6"
hex = "0.4.2"
htmlescape = "0.3.1"
lazy_static = "1.4.0"
mailparse = "0.13.0"
md-5 = "0.9.1"
num_enum = "0.5.1"
path-absolutize = "3.0.6"
path-ext = "0.1.0"
plist = "1.0.0"
regex = "1.3.9"
rpassword = "5.0.0"
rusqlite = "0.23.1"
scraper = "0.12.0"
serde = "1.0.116"
serde_json = "1.0.57"
tempfile = "3.1.0"
walkdir = "2.3.1"

[dependencies.ibackuptool2]
path = "lib/ibackuptool2"

[dependencies.image]
version = "0.23.13"
default-features = false
features = ["bmp", "jpeg", "jpeg_rayon", "png"]

[dependencies.log]
version = "0.4.11"
features = ["max_level_trace", "release_max_level_info"]

[dependencies.structopt]
version = "0.3.18"
default-features = false
