[workspace]
resolver = "2"
members = ["packages/chat_importer", "packages/ibackuptool2"]

[workspace.dependencies]
chrono = "0.4.38"
log = { version = "0.4.22", features = [
    "max_level_trace",
    "release_max_level_info",
] }
regex = "1.11.1"
rusqlite = "0.32.1"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.66"

gchdb = { git = "https://github.com/darkskygit/GCHDB" }
ibackuptool2 = { path = "packages/ibackuptool2" }

[profile.release]
lto = true
panic = "abort"
# opt-level = "z"
codegen-units = 1
incremental = false
